force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__Active__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>