force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__AttachmentId__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__AttachmentId__c</fullName>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>