force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__Category__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>FieloEE__Category__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>