force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__Menu__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Menu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Specify the menu where the partner is going to be redirected after submitting the survey</inlineHelpText>
    <label>Menu</label>
    <referenceTo>FieloEE__Menu__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>