force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__OneAnswerOnly__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__OneAnswerOnly__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If you want to enforce that a member submit only one time the Survey</inlineHelpText>
    <label>One Answer Only</label>
    <type>Checkbox</type>
</CustomField>