force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__Pollster__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__Pollster__c</fullName>
    <label>Pollster</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>