force-app/main/default/objects/FieloSVY__Survey__c/fields/FieloSVY__SurveyDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloSVY__SurveyDescription__c</fullName>
    <inlineHelpText>Enter a description text that will be shown below the title above the survey</inlineHelpText>
    <label>Survey Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>