force-app/main/default/objects/FieloSVY__Survey__c/listViews/FieloSVY__All.listView-meta.xml
<ListView>
    <fullName>FieloSVY__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>